double scroll bar fix

--- a/scss/scss.scss
+++ b/scss/scss.scss
@@ -51,9 +51,6 @@
 @import "../bulma/sass/components/navbar";
 @import "../bulma/sass/elements/form";
 @import "../bulma/sass/elements/bulma-checkradio";
-html, body {
-  overflow-x:hidden;
-}
 body {
   font-family: 'Raleway', sans-serif;
   margin: 0;
@@ -61,6 +58,7 @@ body {
   padding-top: 3.25rem;
   max-width: 100%;
   height: 100vh;
+  overflow-x:hidden;
 }
 .button {
   text-decoration: none;
